--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,6 +11,7 @@
         android:layout_width="90dp"
         android:layout_height="90dp"
         tools:srcCompat="@tools:sample/avatars"
+        android:contentDescription="@string/song_cover_img_desc"
         />
 
     <LinearLayout
@@ -19,13 +19,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
-        android:paddingLeft="8dp">
+        android:paddingStart="8dp">
 
         <TextView
             android:id="@+id/songTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Song TitleSong TitleSong Title"
+            android:text="@string/song_titles_placeholder"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="?android:textColorPrimary"
             android:ellipsize="end"
@@ -35,10 +35,11 @@
             android:id="@+id/artistName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="@string/artist_name_placeholder"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="?android:textColorSecondary"
-            android:ellipsize="end" />
+            android:ellipsize="end"
+            android:textStyle="italic"/>
     </LinearLayout>
 
 </LinearLayout>
