--- a/app/src/main/res/layout/song_list_item.xml
+++ b/app/src/main/res/layout/song_list_item.xml
@@ -39,7 +39,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="?android:textColorSecondary"
             android:ellipsize="end"
-            android:textStyle="italic"/>
+            android:textStyle="italic"
+            android:singleLine="true"/>
     </LinearLayout>
 
 </LinearLayout>
